# project_priority

./: .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  README.md  __init__.py  __manifest__.py  project_priority.pmd  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
doc/: api.md
models/: __init__.py  project_priority.py  project_team.py  project_team_priority_label.py
security/: ir.model.access.csv  security.xml
static/description/: index.html
tests/: __init__.py  common.py  test_mocks.py  test_project_priority.py  test_project_team.py
views/: project_priority_views.xml
