[project]
name = "project_priority"
version = "18.0.1.0.0"
description = "Automated project prioritization with manual override capabilities"
authors = [
    {name = "3C LLC", email = "support@3clabsllc.com"}
]
license = "AGPL-3"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=project_priority"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
]

[tool.pylint.format]
max-line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3